# docent

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend-production  LICENSE  README.md  agent_runs_07287acb-8908-4f4c-95ec-8cdeadcb4423.ipynb  cursor-rules.md  diffing.ipynb  docker-compose-db.yml  docker-compose.yml  faience_beads_incident_transcript.txt  ingest_faience_incident.py  ingest_gemini_redteam.py  ingest_gemini_redteam_local.py  ingestion-plan.md  mkdocs.yml  notes  notes.md  otel-collector-config.yaml  preview_faience_incident.py  preview_parsed_transcript.py  pyproject.toml  pytest.ini  task_plan.md
.aws/: README.md  alb.tf  app.tfvars  app_runner.tf  bastion.tf  bridgewater.hcl  bridgewater.tfvars  datadog.tf  docent-diagram-12-16-25.txt  ecr.tf  ecs.tf  elasticache.tf  main.tf  metr-tailscale-user-data.tftpl  metr.hcl  metr.tfvars  metr_tailscale.tf  outputs.tf  private_api.tf  prod.hcl  prod.tfvars  rds.tf  secrets.tf  security_groups.tf  ssm.tf  staging.hcl  staging.tfvars  staging2.hcl  staging2.tfvars  switch-to-app.sh  switch-to-bridgewater.sh  switch-to-metr.sh  switch-to-prod.sh  switch-to-staging.sh  switch-to-staging2.sh  tailscale-user-data.tftpl  tailscale.tf  terraform.tfvars.example  variables.tf  vpc.tf
.claude/: settings.json
.github/: dependabot.yml
agent-tools/: README.md  SKILL.md
cli/: pyproject.toml
cli/docent_cli/: main.py
data/: README.md  __init__.py  (+10 more)
lib/frames/: README.md  pyproject.toml
lib/frames/frames/: attributes.py  frame.py  transcript.py  types.py
lib/frames/frames/clustering/: cluster_assigner.py  cluster_generator.py  multi_round_clustering.py
lib/llm_util/: README.md  pyproject.toml
lib/llm_util/llm_util/: anthropic.py  llm_cache.py  openai.py  prod_llms.py  types.py
lib/log_util/: pyproject.toml
lib/log_util/log_util/: __init__.py  logger.py
lib/luce_lib/: pyproject.toml
lib/luce_lib/luce_lib/: __init__.py  artifact_lib.py  config_lib.py  monorepo_util.py
lib/lucepkg/: README.md  pyproject.toml
lib/lucepkg/lucepkg/: __init__.py  cli.py  cli_context.py  sync_lib.py
lib/lucepkg/lucepkg/commands/: artifact.py  config.py  get.py  irun.py  marimo.py  nb.py  node.py  preview.py  run.py  setup.py  uv.py
lib/lucepkg/scripts/: activate_luce.sh  shellenv.sh
lib/lucepkg/scripts/commands/: install_node.sh  start_notebook.sh
lib/lucepkg/tests/: __init__.py  test_artifact_commands.py
project/docent/: .env.template  Dockerfile  README.md  STRUCTURE.md  pyproject.toml
project/docent/docent/: cli.py  describe_interv.py  event_streamer.py  forest.py  mindiffer.py  types.py
project/docent/docent/_frames/: attributes.py  filters.py  transcript.py
project/docent/docent/_frames/clustering/: cluster_assigner.py  modal_assigner.py  multi_round_clustering.py
project/docent/docent/_frames/db/: service.py
project/docent/docent/_loader/: __init__.py  load.py  load_epoch.py  load_inspect.py  load_oh_swe_bench.py  load_tau_bench.py
project/docent/docent/_sdk/: client.py
project/docent/docent/_server/: api.py  util.py
project/docent/docent/_server/_assistant/: feedback.py  summarizer.py
project/docent/docent/_server/_broker/: router.py
project/docent/docent/_server/_rest/: router.py  send_state.py
project/docent/docent/_web/: package.json
project/docent/docent/_web/app/: constants.ts
project/docent/docent/_web/app/[eval_id]/: page.tsx
project/docent/docent/_web/app/[eval_id]/transcript/[datapoint_id]/: page.tsx
project/docent/docent/_web/app/[eval_id]/transcript/components/: TaskSummary.tsx
project/docent/docent/_web/app/components/: AttributeFinder.tsx  BinEditor.tsx  ExperimentViewer.tsx  InnerCard.tsx
project/docent/docent/_web/app/services/: apiService.ts  socketService.ts
project/docent/docent/_web/app/store/: experimentViewerSlice.ts  frameSlice.ts  store.ts  toastSlice.ts  transcriptSlice.ts  webSocketMiddleware.ts
project/docent/docent/_web/app/types/: experimentViewerTypes.ts  transcriptTypes.ts
project/docent/docent/_web/components/: ReduxToastHandler.tsx
project/docent/docent/_web/components/ui/: toast.tsx
project/docent/docent/assistant/: chat.py  summarizer.py  tdiff.py
project/docent/docent/experiments/: experiment_cache.py  run_inspect_experiment.py  run_inspect_experiment.sh  runner.py
project/docent/docent/loader/: __init__.py  load.py  load_custom.py  load_inspect.py  load_oh_swe_bench.py  load_tau_bench.py
project/docent/docent/server/: main.py  task_manager.py  test_docent_server.py
project/docent/docent/server/ws_handlers/: assistant.py  edit_framegrid.py  forest.py  interventions.py  send_framegrid.py  session.py  util.py
project/docent/scripts/: api.sh  build_and_serve.sh  docker_build.sh  docker_run.sh  docker_setup.sh  inspect_clean.sh  server_setup.sh  sync_repos.sh
project/docent/web/: middleware.ts  package-lock.json  package.json
project/docent/web/app/: layout.tsx  page.tsx
project/docent/web/app/[eval_id]/: layout.tsx  page.tsx
project/docent/web/app/[eval_id]/diff/: page.tsx
project/docent/web/app/[eval_id]/diff/components/: TranscriptCompare.tsx  TranscriptDiffer.tsx
project/docent/web/app/[eval_id]/forest/[sample_id]/: page.tsx
project/docent/web/app/[eval_id]/forest/components/: ExperimentGraph.tsx  TranscriptGraph.tsx
project/docent/web/app/[eval_id]/transcript/[datapoint_id]/: page.tsx
project/docent/web/app/[eval_id]/transcript/components/: AgentSummary.tsx  TaPanel.tsx  TaskSummary.tsx  TranscriptView.tsx  TranscriptViewer.tsx
project/docent/web/app/components/: ApiKeyManager.tsx  AttributeFinder.tsx  BinEditor.tsx  Breadcrumbs.tsx  ClusterProposalDialog.tsx  DisconnectModal.tsx  ExperimentViewer.tsx  GlobalView.tsx  InnerCard.tsx  OverviewSection.tsx  RateLimitModal.tsx
project/docent/web/app/contexts/: FrameGridContext.tsx
project/docent/web/app/store/: store.ts
project/docent/web/app/types/: docent.ts
project/docent/web/components/ui/: scroll-area.tsx
(+919 files in other folders)
