[project]
name = "luce"
version = "0.0.1"
description = "The base environment for the Transluce Observability repository."

requires-python = ">=3.11"
dependencies = [
    "luce_lib",
    "pre-commit>=3.8.0",
    "jupyter>=1.1.1",
    "jupyter-collaboration>=1.2.0",
    "autoflake==2.3.1",
    "pyright>=1.1.0",
]

[dependency-groups]
# We specify most subpackages  as a dependency group, so that uv can install them
# into the root virtual environment for development.
# Some subpackages need a different virtual environment; these are instead specified in
# the `envs` directory.
# Library packages. Each package under clarity/lib should be added here.
# EXCEPTION: "lucepkg" has its own virtual environment.
frames = ["frames"]
luce_lib = ["luce_lib"]
lucepkg = ["lucepkg"]
llm_util = ["llm_util"]
log_util = ["log_util"]
env_util = ["env_util"]
# External packages. Each package under clarity/external should be added here.
inspect_ai = ["inspect-ai"]
inspect_evals = ["inspect-evals"]
# Project packages. Each package under clarity/project should be added here.
docent = ["docent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']
force-exclude = '''
# force-exclude can be used to exclude from formatting even when run by VSCode.
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^\/external\/.*
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.uv]
package = false
constraint-dependencies = []

[tool.uv.sources]
# Library packages. Each package under clarity/lib should be added here.
frames = { path = "lib/frames", editable = true }
luce_lib = { path = "lib/luce_lib", editable = true }
lucepkg = { path = "lib/lucepkg", editable = true }
llm_util = { path = "lib/llm_util", editable = true }
log_util = { path = "lib/log_util", editable = true }
env_util = { path = "lib/env_util", editable = true }
# External packages. Each package under clarity/external should be added here.
inspect_ai = { path = "external/inspect_ai", editable = true }
inspect_evals = { path = "external/inspect_evals", editable = true }
# Project packages. Each package under clarity/project should be added here.
docent = { path = "project/docent", editable = true }

[tool.pyright]
include = [
    "lib/frames",
    "lib/lucepkg",
    "lib/llm_util",
    "lib/log_util",
    "lib/env_util",
    "project/docent",
    "external/inspect_ai",
    "external/inspect_evals",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [
    "external/",
]
