[project]
name = "docent-cli"
version = "0.0.1"
description = "CLI interface for Docent"

requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.3",
]

[project.scripts]
docent = "docent_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docent_cli"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pyright]
include = [
    "."
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
