[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_util"
version = "0.0.1"
description = "Library for interacting with LLM APIs"

requires-python = ">=3.11"
dependencies = [
    "openai>=1.68.0",
    "anthropic>=0.47.0",
    "backoff>=2.2.1",
    "tiktoken>=0.7.0",
    "env_util",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_util"]

[tool.pyright]
strict = ["llm_util"]
reportMissingTypeStubs = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
managed = false
