[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luce_lib"
version = "0.0.1"
description = "Library for managing the Transluce monorepo, configuration, and artifacts"

requires-python = ">=3.11"
dependencies = [
    "tomlkit>=0.12.3",
    "boto3>=1.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["luce_lib"]

[tool.pyright]
strict = ["luce_lib"]
reportMissingTypeStubs = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
managed = false
