[project]
name = "docent"
version = "0.0.1"
description = "Docent"

requires-python = "==3.12.*"
dependencies = [
    "frames",
    "fastapi>=0.114.1",
    "modal>=0.64.213",
    "uvicorn[standard]>=0.23.1",
    "inspect-ai==0.0.0+transluce",
    "inspect-evals==0.0.0+transluce",
    "watchdog>=6.0.0",
    "sentry-sdk>=2.23.1",
    "llm_util",
    "env_util",
]

[tool.uv]
managed = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docent"]

[tool.hatch.metadata]
allow-direct-references = true
