[project]
name = "docent"
version = "0.0.1"
description = "Docent"

requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114.1",
    "modal>=0.64.213",
    "uvicorn[standard]>=0.23.1",
    "inspect-ai>=0.3.93",
    "watchdog>=6.0.0",
    "sentry-sdk>=2.23.1",
    "redis>=5.0.0",
    "plotly>=6.0.0",
    "torch",
    "transformers>=4.48.0",
    "matplotlib",
    "sqlalchemy>=2.0.40",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "jupyter>=1.0.0",
    "llm_util",
    "log_util",
]

[project.scripts]
docent = "docent.cli:app"

[tool.uv]
managed = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docent"]

[tool.hatch.metadata]
allow-direct-references = true
